# DAML

./: pyproject.toml  requirements.txt
ai-applications/CLIP/: classify_using_clip_workshop.ipynb
ai-applications/CNN/: CNN.ipynb
ai-applications/NN/: NN.ipynb
daml-exam-2425-Rostislav-Dusnii/: exam_details.txt
daml-exam-2425-Rostislav-Dusnii/january_exam/: examen_daml_health_nl.ipynb
