[project]
name = "neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuda-python>=13.0.3",
    "ftfy>=6.3.1",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "plotly>=6.3.1",
    "pydot>=4.0.1",
    "pydotplus>=2.0.2",
    "regex>=2025.10.23",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "xxx>=0.0.1",
]
